--- a/less/index.less
+++ b/less/index.less
@@ -14,8 +14,11 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    max-width: 800px;
     width: 80%;
+    max-width: @container-width;
     height: 500px;
-    background: darkgrey;
+    background: rgb(218, 218, 218);
+    .border-radius(5px, @border-radius-card-corner, @border-radius-card-corner, @border-radius-card-corner);
+}
+
 }
