--- a/less/index.less
+++ b/less/index.less
@@ -18,7 +18,9 @@ body {
     max-width: @container-width;
     height: 500px;
     background: rgb(218, 218, 218);
-    .border-radius(5px, @border-radius-card-corner, @border-radius-card-corner, @border-radius-card-corner);
+    .border-radius(5px, @border-radius-card-corner, 
+                            @border-radius-card-corner, 
+                                @border-radius-card-corner);
 }
 
 .categories {
