--- a/less/index.less
+++ b/less/index.less
@@ -46,18 +46,18 @@ body {
 .categories {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     position: absolute;
     right: 0;
     height: 100%;
-    width: 80px;
+    width: (80% / @container-width) * 100;
     border-top-right-radius: @border-radius-card-corner;
     border-bottom-right-radius: @border-radius-card-corner;
-    background: whitesmoke;
+    background: @card-blue-bg;
     .btn-category {
         display: flex;
         height: auto;
-        padding: 10px;
+        padding: 20px (20% / @container-width) * 100;
         &:first-child {
         border-top-right-radius: @border-radius-card-corner;
         }
