--- a/less/index.less
+++ b/less/index.less
@@ -1,10 +1,12 @@
 @import 'variables';
 @import 'mixins';
 
+html {
+    font-size: 62.5%;
 
+}
 body {
     box-sizing: border-box;
-    font-size: 62.5%;
     background: rgb(65, 65, 65);
 }
 
