--- a/less/index.less
+++ b/less/index.less
@@ -10,8 +10,8 @@ body {
     background: rgb(65, 65, 65);
 }
 
-
 .card-container {
+    display: flex;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -19,10 +19,18 @@ body {
     width: 80%;
     max-width: @container-width;
     height: 500px;
-    background: rgb(218, 218, 218);
+    font-size: 1.6rem;
+    background: @card-main-bg;
     .border-radius(5px, @border-radius-card-corner, 
                             @border-radius-card-corner, 
                                 @border-radius-card-corner);
+ 
+    box-shadow: -9px 10px 5px 0px rgba(0, 0, 0, 0.034);
+    &:hover {
+        box-shadow: -9px 10px 5px 0px rgba(0, 179, 224, 0.055);
+    }
+    
+}
 
 
 .intro {
@@ -42,7 +50,7 @@ body {
         display: inline-block;
         font-size: 3rem;
         width: 100%;
-}
+    }
 }
 
 .categories {
