--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,12 @@
+html {
+  font-size: 62.5%;
+}
 body {
   box-sizing: border-box;
-  font-size: 62.5%;
   background: #414141;
 }
 .card-container {
+  display: flex;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -11,28 +14,52 @@ body {
   width: 80%;
   max-width: 800px;
   height: 500px;
-  background: #dadada;
+  font-size: 1.6rem;
+  background: #2c2a2d;
   border-top-left-radius: 5px;
   border-top-right-radius: 15px;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
+  box-shadow: -9px 10px 5px 0px rgba(0, 0, 0, 0.034);
+}
+.card-container:hover {
+  box-shadow: -9px 10px 5px 0px rgba(0, 179, 224, 0.055);
+}
+.intro {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 0 0 2.5%;
+  color: whitesmoke;
+  background: rgba(87, 165, 255, 0.349);
+  border-top-left-radius: 5px;
+  border-bottom-right-radius: 15px;
+  height: 150px;
+  width: 350px;
+}
+.intro .name {
+  font-size: 5rem;
+}
+.intro .job-position {
+  display: inline-block;
+  font-size: 3rem;
+  width: 100%;
 }
 .categories {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   position: absolute;
   right: 0;
   height: 100%;
-  width: 80px;
+  width: 10%;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background: whitesmoke;
+  background: rgba(87, 165, 255, 0.349);
 }
 .categories .btn-category {
   display: flex;
   height: auto;
-  padding: 10px;
+  padding: 20px 2.5%;
 }
 .categories .btn-category:first-child {
   border-top-right-radius: 15px;
