Removed a bottom border in categories section

--- a/less/index.less
+++ b/less/index.less
@@ -72,6 +72,9 @@ body {
         height: 100%;
         padding: 20px (20% / @container-width) * 100;
         border-bottom: 3px solid black;
+        &:last-child {
+            border-bottom: none;
+        }
     }
     .btn-category {
         &:first-child {
