--- a/css/index.css
+++ b/css/index.css
@@ -65,6 +65,9 @@ body {
   padding: 20px 2.5%;
   border-bottom: 3px solid black;
 }
+.categories .wrapper:last-child {
+  border-bottom: none;
+}
 .categories .btn-category:first-child {
   border-top-right-radius: 15px;
 }
