--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,6 @@
-@container-width: 800px;
+@container-width: 900px;
 @border-radius-card-corner: 15px;
+
+@card-align-top: 20px;
 @card-main-bg: #2c2a2d;
 @card-blue-bg: rgba(87, 165, 255, 0.349);
