--- a/css/index.css
+++ b/css/index.css
@@ -12,8 +12,8 @@ body {
   top: 50%;
   transform: translate(-50%, -50%);
   width: 80%;
-  max-width: 800px;
-  height: 500px;
+  max-width: 900px;
+  height: 600px;
   font-size: 1.6rem;
   background: #2c2a2d;
   border-top-left-radius: 5px;
@@ -28,7 +28,7 @@ body {
 .intro {
   display: flex;
   flex-direction: column;
-  padding: 20px 0 0 2.5%;
+  padding: 20px 0 0 2.22222222%;
   color: whitesmoke;
   background: rgba(87, 165, 255, 0.349);
   border-top-left-radius: 5px;
@@ -51,7 +51,7 @@ body {
   position: absolute;
   right: 0;
   height: 100%;
-  width: 27.5%;
+  width: 24.44444444%;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background: rgba(87, 165, 255, 0.349);
@@ -62,7 +62,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   height: 100%;
-  padding: 20px 2.5%;
+  padding: 20px 2.22222222%;
   border-bottom: 3px solid black;
 }
 .categories .wrapper:last-child {
