Fixed variable colors

--- a/less/variables.less
+++ b/less/variables.less
@@ -3,4 +3,5 @@
 
 @card-align-top: 20px;
 @card-main-bg: #2c2a2d;
-@card-blue-bg: rgba(87, 165, 255, 0.349);
+@card-blue-bg: #2a5485;
+@card-blue-highlight:  #3caae9;
