--- a/less/variables.less
+++ b/less/variables.less
@@ -4,4 +4,4 @@
 @card-align-top: 20px;
 @card-main-bg: #2c2a2d;
 @card-blue-bg: #2a5485;
-@card-blue-highlight:  #3caae9;
+@card-blue-highlight:  #2987bd;
