--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ body {
   transform: translate(-50%, -50%);
   width: 80%;
   max-width: 900px;
-  height: 600px;
+  height: 66.6%;
   font-size: 1.6rem;
   background: #2c2a2d;
   border-top-left-radius: 5px;
