--- a/less/index.less
+++ b/less/index.less
@@ -18,7 +18,7 @@ body {
     transform: translate(-50%, -50%);
     width: 80%;
     max-width: @container-width;
-    height: 600px;
+    height: 66.6%;
     font-size: 1.6rem;
     background: @card-main-bg;
     .border-radius(5px, @border-radius-card-corner, 
