Height media query added for topic category

--- a/less/index.less
+++ b/less/index.less
@@ -87,7 +87,10 @@ body {
 
     .topic-category {
         font-size: 3rem;
-        color: whitesmoke;       
+        color: whitesmoke;
+        @media (min-height: 600px) and (max-height: 700px) {
+            font-size: 2.4rem;
+        }
     }
     .icon-category {
         height: 80px;
