--- a/css/index.css
+++ b/css/index.css
@@ -80,6 +80,11 @@ body {
   font-size: 3rem;
   color: whitesmoke;
 }
+@media (min-height: 600px) and (max-height: 700px) {
+  .categories .topic-category {
+    font-size: 2.4rem;
+  }
+}
 .categories .icon-category {
   height: 80px;
 }
