--- a/less/index.less
+++ b/less/index.less
@@ -13,6 +13,7 @@ body {
 
 .card-container {
     display: flex;
+    justify-content: space-between;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -30,7 +31,6 @@ body {
     &:hover {
         box-shadow: -9px 10px 5px 0px rgba(0, 179, 224, 0.055);
     }
-    
 } //card-container
 
 
@@ -44,6 +44,15 @@ body {
     border-bottom-right-radius: @border-radius-card-corner;
     height: 150px;
     width: 350px;
+    @media @phone-landscape {
+        justify-content: center;
+        padding: 0 0 0 (20% / @container-width) * 100;        
+        height: 100%;
+        width: 100%;
+        border-right: 3px solid black;
+        border-bottom-left-radius: @border-radius-card-corner;
+        border-bottom-right-radius: 0;
+    }
     .name {
         font-size: 5rem;
     }
@@ -58,12 +67,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: absolute;
-    right: 0;
     height: 100%;
     width: (220% / @container-width) * 100;
     border-top-right-radius: @border-radius-card-corner;
     border-bottom-right-radius: @border-radius-card-corner;
+    @media @phone-landscape {
+        width: (440% / @container-width) * 100;
+    }
     .wrapper {
         display: flex;
         flex-direction: column;
@@ -84,6 +94,8 @@ body {
             border-bottom: none;
             border-bottom-right-radius: @border-radius-card-corner;
         }
+
+    
     } //wrapper
 
     .topic-category {
