--- a/less/index.less
+++ b/less/index.less
@@ -87,6 +87,9 @@ body {
         &:hover {
             background: @card-blue-highlight;
         }
+        &:active {
+            background: @card-blue-active;
+        }
         &:first-child {
             border-top-right-radius: @border-radius-card-corner;
         }
