--- a/less/variables.less
+++ b/less/variables.less
@@ -5,5 +5,6 @@
 @card-main-bg: #2c2a2d;
 @card-blue-bg: #2a5485;
 @card-blue-highlight:  #2987bd;
+@card-blue-active: #36a5e6;
 
 @phone-landscape: ~'(max-height: 599px)';
