--- a/css/index.css
+++ b/css/index.css
@@ -152,6 +152,19 @@ body {
 .card-container:hover {
   box-shadow: -9px 10px 5px 0px rgba(0, 179, 224, 0.055);
 }
+@media (max-height: 599px) {
+  .card-container {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (max-width: 650px) {
+  .card-container {
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+}
 .intro {
   display: flex;
   flex-direction: column;
@@ -174,13 +187,36 @@ body {
     border-bottom-right-radius: 0;
   }
 }
+@media (max-width: 650px) {
+  .intro {
+    align-items: center;
+    flex-direction: column;
+    border-bottom: 3px solid black;
+    border-radius: 0;
+    padding: 0;
+    width: 100%;
+  }
+}
 .intro .name {
+  display: flex;
+  justify-content: flex-start;
   font-size: 5rem;
 }
+@media (max-width: 650px) {
+  .intro .name {
+    justify-content: center;
+  }
+}
 .intro .job-position {
-  display: inline-block;
+  display: flex;
+  justify-content: flex-start;
   font-size: 3rem;
   width: 100%;
+}
+@media (max-width: 650px) {
+  .intro .job-position {
+    justify-content: center;
+  }
 }
 .categories {
   display: flex;
@@ -194,6 +230,16 @@ body {
 @media (max-height: 599px) {
   .categories {
     width: 48.88888889%;
+  }
+}
+@media (max-width: 650px) {
+  .categories {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: 100%;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
   }
 }
 .categories .wrapper {
@@ -216,9 +262,19 @@ body {
 .categories .wrapper:first-child {
   border-top-right-radius: 15px;
 }
+@media (max-width: 650px) {
+  .categories .wrapper:first-child {
+    border-radius: 0;
+  }
+}
 .categories .wrapper:last-child {
   border-bottom: none;
   border-bottom-right-radius: 15px;
+}
+@media (max-width: 650px) {
+  .categories .wrapper:last-child {
+    border-radius: 0;
+  }
 }
 .categories .topic-category {
   font-size: 3rem;
