--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,6 @@
 @container-width: 900px;
 @border-radius-card-corner: 15px;
-
+@standard-border-line: ~'3px solid black';
 @card-align-top: 20px;
 @card-main-bg: #2c2a2d;
 @card-blue-bg: #2a5485;
@@ -8,3 +8,4 @@
 @card-blue-active: #36a5e6;
 
 @phone-landscape: ~'(max-height: 599px)';
+@phone-portrait: ~'(max-width: 650px)';
