--- a/css/index.css
+++ b/css/index.css
@@ -158,7 +158,7 @@ body {
     height: 100%;
   }
 }
-@media (max-width: 650px) {
+@media (max-width: 740px) {
   .card-container {
     flex-direction: column;
     width: 100%;
@@ -181,13 +181,13 @@ body {
     justify-content: center;
     padding: 0 0 0 2.22222222%;
     height: 100%;
-    width: 100%;
+    width: 60%;
     border-right: 3px solid black;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 0;
   }
 }
-@media (max-width: 650px) {
+@media (max-width: 740px) {
   .intro {
     align-items: center;
     flex-direction: column;
@@ -202,7 +202,7 @@ body {
   justify-content: flex-start;
   font-size: 5rem;
 }
-@media (max-width: 650px) {
+@media (max-width: 740px) {
   .intro .name {
     justify-content: center;
   }
@@ -213,7 +213,7 @@ body {
   font-size: 3rem;
   width: 100%;
 }
-@media (max-width: 650px) {
+@media (max-width: 740px) {
   .intro .job-position {
     justify-content: center;
   }
@@ -230,13 +230,18 @@ body {
 @media (max-height: 599px) {
   .categories {
     width: 48.88888889%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: 100%;
   }
 }
-@media (max-width: 650px) {
+@media (max-width: 740px) {
   .categories {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    height: 100%;
     width: 100%;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
@@ -262,7 +267,7 @@ body {
 .categories .wrapper:first-child {
   border-top-right-radius: 15px;
 }
-@media (max-width: 650px) {
+@media (max-width: 740px) {
   .categories .wrapper:first-child {
     border-radius: 0;
   }
@@ -271,7 +276,7 @@ body {
   border-bottom: none;
   border-bottom-right-radius: 15px;
 }
-@media (max-width: 650px) {
+@media (max-width: 740px) {
   .categories .wrapper:last-child {
     border-radius: 0;
   }
