--- a/less/index.less
+++ b/less/index.less
@@ -57,7 +57,7 @@ body {
         justify-content: center;
         padding: 0 0 0 (20% / @container-width) * 100;        
         height: 100%;
-        width: 100%;
+        width: 60%;
         border-right: @standard-border-line;
         border-bottom-left-radius: @border-radius-card-corner;
         border-bottom-right-radius: 0;
@@ -99,11 +99,16 @@ body {
     border-bottom-right-radius: @border-radius-card-corner;
     @media @phone-landscape {
         width: (440% / @container-width) * 100;
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        height: 100%;
     }
     @media @phone-portrait {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
+        height: 100%;
         width: 100%;
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
