--- a/less/index.less
+++ b/less/index.less
@@ -31,15 +31,6 @@ body {
     &:hover {
         box-shadow: -9px 10px 5px 0px rgba(0, 179, 224, 0.055);
     }
-    @media @phone-landscape {
-        width: 100%;
-        height: 100%;
-    }
-    @media @phone-portrait {
-        flex-direction: column;
-        width: 100%;
-        height: 100%;
-    }
 } //card-container
 
 
@@ -50,42 +41,22 @@ body {
     color: whitesmoke;
     background: @card-blue-bg;
     border-top-left-radius: 5px;
-    border-bottom-right-radius: @border-radius-card-corner;
-    height: 150px;
+    border-top: 120px solid grey;
+    border-right: 80px solid transparent;
+    height: 0px;
     width: 350px;
-    @media @phone-landscape {
-        justify-content: center;
-        padding: 0 0 0 (20% / @container-width) * 100;        
-        height: 100%;
-        width: 60%;
-        border-right: @standard-border-line;
-        border-bottom-left-radius: @border-radius-card-corner;
-        border-bottom-right-radius: 0;
-    }
-    @media @phone-portrait {
-        align-items: center;
-        flex-direction: column;
-        border-bottom: @standard-border-line;
-        border-radius: 0;
-        padding: 0;
-        width: 100%;
-    }
     .name {
         display: flex;
         justify-content: flex-start;
         font-size: 5rem;
-        @media @phone-portrait {
-            justify-content: center;
-        }
+       
     }
     .job-position {
         display: flex;
         justify-content: flex-start;
         font-size: 3rem;
         width: 100%;
-        @media @phone-portrait {
-            justify-content: center;
-        }
+       
     }
 } // intro section
 
@@ -97,22 +68,7 @@ body {
     width: (220% / @container-width) * 100;
     border-top-right-radius: @border-radius-card-corner;
     border-bottom-right-radius: @border-radius-card-corner;
-    @media @phone-landscape {
-        width: (440% / @container-width) * 100;
-        display:grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        height: 100%;
-    }
-    @media @phone-portrait {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        height: 100%;
-        width: 100%;
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-    }
+  
     .wrapper {
         display: flex;
         flex-direction: column;
@@ -132,16 +88,11 @@ body {
         }
         &:first-child {
             border-top-right-radius: @border-radius-card-corner;
-            @media @phone-portrait {
-                border-radius: 0;
-            }
+           
         }
         &:last-child {
             border-bottom: none;
             border-bottom-right-radius: @border-radius-card-corner;
-            @media @phone-portrait {
-                border-radius: 0;
-            }
         }
        
     } //wrapper
@@ -149,9 +100,6 @@ body {
     .topic-category {
         font-size: 3rem;
         color: whitesmoke;
-        @media (min-height: 600px) and (max-height: 700px) {
-            font-size: 2.4rem;
-        }
        
     }
     .icon-category {
