--- a/css/index.css
+++ b/css/index.css
@@ -152,19 +152,6 @@ body {
 .card-container:hover {
   box-shadow: -9px 10px 5px 0px rgba(0, 179, 224, 0.055);
 }
-@media (max-height: 599px) {
-  .card-container {
-    width: 100%;
-    height: 100%;
-  }
-}
-@media (max-width: 740px) {
-  .card-container {
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-  }
-}
 .intro {
   display: flex;
   flex-direction: column;
@@ -172,51 +159,21 @@ body {
   color: whitesmoke;
   background: #2a5485;
   border-top-left-radius: 5px;
-  border-bottom-right-radius: 15px;
-  height: 150px;
+  border-top: 120px solid grey;
+  border-right: 80px solid transparent;
+  height: 0px;
   width: 350px;
-}
-@media (max-height: 599px) {
-  .intro {
-    justify-content: center;
-    padding: 0 0 0 2.22222222%;
-    height: 100%;
-    width: 60%;
-    border-right: 3px solid black;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 0;
-  }
-}
-@media (max-width: 740px) {
-  .intro {
-    align-items: center;
-    flex-direction: column;
-    border-bottom: 3px solid black;
-    border-radius: 0;
-    padding: 0;
-    width: 100%;
-  }
 }
 .intro .name {
   display: flex;
   justify-content: flex-start;
   font-size: 5rem;
 }
-@media (max-width: 740px) {
-  .intro .name {
-    justify-content: center;
-  }
-}
 .intro .job-position {
   display: flex;
   justify-content: flex-start;
   font-size: 3rem;
   width: 100%;
-}
-@media (max-width: 740px) {
-  .intro .job-position {
-    justify-content: center;
-  }
 }
 .categories {
   display: flex;
@@ -226,26 +183,6 @@ body {
   width: 24.44444444%;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-}
-@media (max-height: 599px) {
-  .categories {
-    width: 48.88888889%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    height: 100%;
-  }
-}
-@media (max-width: 740px) {
-  .categories {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    height: 100%;
-    width: 100%;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-  }
 }
 .categories .wrapper {
   display: flex;
@@ -267,28 +204,13 @@ body {
 .categories .wrapper:first-child {
   border-top-right-radius: 15px;
 }
-@media (max-width: 740px) {
-  .categories .wrapper:first-child {
-    border-radius: 0;
-  }
-}
 .categories .wrapper:last-child {
   border-bottom: none;
   border-bottom-right-radius: 15px;
 }
-@media (max-width: 740px) {
-  .categories .wrapper:last-child {
-    border-radius: 0;
-  }
-}
 .categories .topic-category {
   font-size: 3rem;
   color: whitesmoke;
-}
-@media (min-height: 600px) and (max-height: 700px) {
-  .categories .topic-category {
-    font-size: 2.4rem;
-  }
 }
 .categories .icon-category {
   height: 80px;
